[gd_scene load_steps=13 format=3 uid="uid://c4h51mcleufdj"]

[ext_resource type="Script" uid="uid://byps7qy1ov38l" path="res://gui/pause_menu/pause_menu.gd" id="1_2mjep"]
[ext_resource type="FontFile" uid="uid://bjnoh35ax06ho" path="res://assets/fonts/Abaddon Bold.ttf" id="2_hce4v"]
[ext_resource type="Texture2D" uid="uid://dnt07ksx3f2ee" path="res://assets/items/items.png" id="2_mqpij"]
[ext_resource type="PackedScene" uid="uid://bm3pgiiqdwuw1" path="res://gui/pause_menu/inventory/inventory_slot.tscn" id="3_5jsve"]
[ext_resource type="Script" uid="uid://dc3psvjy56mdq" path="res://gui/pause_menu/inventory/scripts/inventory_ui.gd" id="3_cqli2"]
[ext_resource type="Resource" uid="uid://dh0movn1o1ypk" path="res://gui/pause_menu/inventory/player_inventory.tres" id="4_wvt6b"]
[ext_resource type="Script" uid="uid://dtgc0lh356583" path="res://gui/pause_menu/quests/quests_ui.gd" id="7_aob5s"]
[ext_resource type="PackedScene" uid="uid://bg6b3ll20hto6" path="res://gui/pause_menu/quests/quest_item.tscn" id="7_vwsmh"]
[ext_resource type="FontFile" uid="uid://heb5g0smtkn3" path="res://assets/fonts/m5x7.ttf" id="9_hsknt"]
[ext_resource type="PackedScene" uid="uid://co5ekos4nhgfx" path="res://gui/pause_menu/quests/quest_step_item.tscn" id="10_w3vpp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5jsve"]
atlas = ExtResource("2_mqpij")
region = Rect2(96, 0, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cqli2"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
texture = SubResource("AtlasTexture_5jsve")
texture_margin_left = 14.0
texture_margin_top = 14.0
texture_margin_right = 14.0
texture_margin_bottom = 14.0

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_2mjep")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Control"]
max_polyphony = 4

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.09803922, 0.02745098, 0.1764706, 0.6862745)

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
offset_left = 15.0
offset_top = 15.0
offset_right = 120.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("2_hce4v")
text = "[PAUSED]"

[node name="TabContainer" type="TabContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 30.0
grow_horizontal = 2
grow_vertical = 2
tab_alignment = 1
current_tab = 1

[node name="Inventory" type="Control" parent="Control/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="PanelContainer" type="PanelContainer" parent="Control/TabContainer/Inventory"]
layout_mode = 1
offset_left = 20.0
offset_top = 20.0
offset_right = 216.0
offset_bottom = 108.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_cqli2")

[node name="GridContainer" type="GridContainer" parent="Control/TabContainer/Inventory/PanelContainer"]
layout_mode = 2
columns = 5
script = ExtResource("3_cqli2")
data = ExtResource("4_wvt6b")

[node name="InventorySlot" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("3_5jsve")]
layout_mode = 2

[node name="InventorySlot2" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("3_5jsve")]
layout_mode = 2

[node name="InventorySlot3" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("3_5jsve")]
layout_mode = 2

[node name="InventorySlot4" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("3_5jsve")]
layout_mode = 2

[node name="InventorySlot5" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("3_5jsve")]
layout_mode = 2

[node name="InventorySlot6" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("3_5jsve")]
layout_mode = 2

[node name="ItemDescription" type="Label" parent="Control/TabContainer/Inventory"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 15.0
offset_top = 8.0
offset_right = 415.0
offset_bottom = 67.0
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Test"
autowrap_mode = 2

[node name="Quests" type="Control" parent="Control/TabContainer"]
layout_mode = 2
script = ExtResource("7_aob5s")
metadata/_tab_index = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Control/TabContainer/Quests"]
layout_mode = 0
offset_left = 14.0
offset_top = 14.0
offset_right = 234.0
offset_bottom = 214.0
follow_focus = true
scroll_vertical_custom_step = 100.0
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="Control/TabContainer/Quests/ScrollContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Control/TabContainer/Quests/ScrollContainer/MarginContainer"]
layout_mode = 2

[node name="QuestItem" parent="Control/TabContainer/Quests/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("7_vwsmh")]
layout_mode = 2

[node name="QuestItem2" parent="Control/TabContainer/Quests/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("7_vwsmh")]
layout_mode = 2

[node name="QuestItem3" parent="Control/TabContainer/Quests/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("7_vwsmh")]
layout_mode = 2

[node name="QuestItem4" parent="Control/TabContainer/Quests/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("7_vwsmh")]
layout_mode = 2

[node name="QuestItem5" parent="Control/TabContainer/Quests/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("7_vwsmh")]
layout_mode = 2

[node name="QuestItem6" parent="Control/TabContainer/Quests/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("7_vwsmh")]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/TabContainer/Quests"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -230.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 77.0
grow_horizontal = 0

[node name="TitleLabel" type="Label" parent="Control/TabContainer/Quests/VBoxContainer"]
custom_minimum_size = Vector2(220, 10)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_hce4v")
text = "Quest Title"
autowrap_mode = 2

[node name="DescriptionLabel" type="Label" parent="Control/TabContainer/Quests/VBoxContainer"]
modulate = Color(0.67058825, 0.67058825, 0.67058825, 1)
custom_minimum_size = Vector2(220, 5)
layout_mode = 2
theme_override_fonts/font = ExtResource("9_hsknt")
text = "Quest Description, Quest Description, Quest Description, Quest Description."
autowrap_mode = 2

[node name="SpacerControl" type="Control" parent="Control/TabContainer/Quests/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="QuestStepItem" parent="Control/TabContainer/Quests/VBoxContainer" instance=ExtResource("10_w3vpp")]
layout_mode = 2

[node name="System" type="Control" parent="Control/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/TabContainer/System"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.0
offset_top = -32.0
offset_right = 57.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button_Save" type="Button" parent="Control/TabContainer/System/VBoxContainer"]
custom_minimum_size = Vector2(55, 30)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_hce4v")
text = "SAVE"

[node name="Button_Load" type="Button" parent="Control/TabContainer/System/VBoxContainer"]
custom_minimum_size = Vector2(55, 30)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_hce4v")
text = "LOAD"

[node name="Button_Quit" type="Button" parent="Control/TabContainer/System/VBoxContainer"]
custom_minimum_size = Vector2(55, 30)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_hce4v")
text = "QUIT"
